--- a/package.json
+++ b/package.json
@@ -1,67 +1,88 @@
 {
-  "name": "eisqa",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "name": "eisqa-backend",
+  "version": "1.0.0",
+  "description": "VivifyIdeas Nest Boilerplate",
+  "author": "Nikola Spalevic",
+  "license": "MIT",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "format": "prettier --write \"src/**/*.ts\" && eslint --fix --ext .ts .",
+    "start": "cross-env NODE_ENV=production ts-node -r tsconfig-paths/register src/main.ts",
+    "start:dev": "cross-env NODE_ENV=development nodemon",
+    "start:debug": "cross-env NODE_ENV=development nodemon --config nodemon-debug.json",
+    "prestart:prod": "rm -rf dist && tsc",
+    "start:prod": "node dist/main.js",
+    "start:hmr": "node dist/server",
+    "clear_jest": "jest --clearCache",
+    "test": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --verbose --detectOpenHandles --forceExit",
+    "test:cov": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --coverage --detectOpenHandles --forceExit",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "webpack": "webpack --config webpack.config.js",
+    "ts-typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
+    "migration:create": "typeorm migration:create -d src/migrations",
+    "migration:run": "yarn ts-typeorm migration:run",
+    "migration:revert": "yarn ts-typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/axios": "^0.1.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "^8.4.1",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/core": "^8.4.1",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/passport": "^8.2.1",
+    "@nestjs/platform-express": "^8.4.1",
+    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/typeorm": "^8.0.3",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "bip32": "^3.0.1",
+    "bitcoinjs-lib": "^6.0.2",
+    "bitcore-explorers": "^1.0.1",
+    "bitcore-lib": "^8.25.36",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "nodemailer": "^6.7.8",
+    "coingecko-api-v3": "^0.0.13",
+    "country-state-city": "^3.0.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0",
+    "ecpair": "^2.0.1",
+    "level": "^8.0.0",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1",
+    "nest-winston": "^1.7.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.7"
+    "rxjs": "^7.5.5",
+    "swagger-ui-express": "^4.3.0",
+    "tiny-secp256k1": "^2.2.1",
+    "typeorm": "^0.2.45",
+    "typeorm-extension": "^1.1.0",
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.4",
-    "@types/node": "^16.11.45",
-    "@types/nodemailer": "^6.4.5",
+    "@nestjs/testing": "^8.4.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cron": "^2.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.2",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.5",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.0",
+    "supertest": "6.2.2",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.8",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.0",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -70,13 +91,10 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
