--- a/.env
+++ b/.env
@@ -2,7 +2,6 @@
 APP_ENV=dev
 APP_URL=http://localhost
 APP_PORT=5000
-BTC_NETWORK=testnet
 
 # JWT AUTH
 JWT_SECRET_KEY=uAsBw6WxqD
@@ -15,7 +14,7 @@ DB_USERNAME=postgres
 DB_PASSWORD=12345678
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=test-eisqa
+DB_DATABASE=eisqa
 #DB_HOST=58.65.160.225
 #DB_PORT=5433
 DB_SYNC=true
