--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\" && eslint --fix --ext .ts .",
     "start": "cross-env NODE_ENV=production ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "cross-env NODE_ENV=development nodemon",
+    "start:dev": "cross-env NODE_ENV=development nodemon -L",
     "start:debug": "cross-env NODE_ENV=development nodemon --config nodemon-debug.json",
     "prestart:prod": "rm -rf dist && tsc",
     "start:prod": "node dist/main.js",
